# vc-test

./: .gitignore  README.md  example_urls.txt  pyproject.toml
src/cli/: __init__.py  main.py  output.py
src/engine/: __init__.py  differ.py  extractor.py  fetcher.py  job_runner.py  models.py  storage.py
tests/integration/: test_fetcher.py
tests/unit/: test_extractor.py  test_models.py
